# generated/api/oas_unimplemented_gen.go
@@ -85,6 +85,33 @@ func (UnimplementedHandler) DeleteStorageGroup(ctx context.Context, params Delet
 	return ht.ErrNotImplemented
 }
 
+// ExchangeYandexAccessToken implements exchangeYandexAccessToken operation.
+//
+// Exchange Yandex Access token for Session token.
+//
+// POST /auth/oauth2/yandex
+func (UnimplementedHandler) ExchangeYandexAccessToken(ctx context.Context, req *ExchangeYandexAccessTokenReq) (r *AuthResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// GetAuthCookieByEmail implements getAuthCookieByEmail operation.
+//
+// Get Auth Cookie by email.
+//
+// POST /auth/testing
+func (UnimplementedHandler) GetAuthCookieByEmail(ctx context.Context, req *GetAuthCookieByEmailRequest) (r *GetAuthCookieByEmailOK, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// GetCurrentUser implements getCurrentUser operation.
+//
+// Get Current User.
+//
+// GET /me
+func (UnimplementedHandler) GetCurrentUser(ctx context.Context) (r *GetCurrentUserResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
 // GetItemById implements getItemById operation.
 //
 // Get Item by ID.
