# generated/openapi.yaml
@@ -452,6 +452,67 @@ paths:
                 $ref: '#/components/schemas/UpdateItemResponse'
         default:
           $ref: '#/components/responses/default-error'
+  /auth/oauth2/yandex:
+    post:
+      tags:
+        - auth
+      summary: Exchange Yandex Access token for Session token
+      operationId: exchangeYandexAccessToken
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                access_token:
+                  type: string
+                  description: Yandex Access token
+              required:
+                - access_token
+      responses:
+        '200':
+          $ref: '#/components/responses/AuthResponse'
+        default:
+          $ref: '#/components/responses/default-error'
+  /auth/testing:
+    post:
+      tags:
+        - auth
+      summary: Get Auth Cookie by email
+      operationId: getAuthCookieByEmail
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GetAuthCookieByEmailRequest'
+      responses:
+        '200':
+          description: Successful operation
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                description: Auth cookie
+              required: true
+        default:
+          $ref: '#/components/responses/default-error'
+  /me:
+    get:
+      tags:
+        - unit
+      summary: Get Current User
+      operationId: getCurrentUser
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetCurrentUserResponse'
+        default:
+          $ref: '#/components/responses/default-error'
 components:
   schemas:
     Error:
@@ -986,8 +1047,6 @@ components:
               type: integer
               nullable: true
               example: 1234567890123
-          required:
-            - id
     ItemPatch:
       allOf:
         - type: object
@@ -1017,6 +1076,38 @@ components:
               $ref: '#/components/schemas/ItemFull'
           required:
             - data
+    GetAuthCookieByEmailRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+      required:
+        - email
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        first_name:
+          type: string
+        last_name:
+          type: string
+        middle_name:
+          type: string
+          nullable: true
+        email:
+          type: string
+      required:
+        - id
+        - email
+        - first_name
+        - last_name
+        - middle_name
+    GetCurrentUserResponse:
+      allOf:
+        - $ref: '#/components/schemas/User'
   responses:
     default-error:
       description: General Error
@@ -1024,3 +1115,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
+    AuthResponse:
+      description: Auth response
+      headers:
+        Set-Cookie:
+          schema:
+            type: string
+            description: Auth cookie
+          required: true
